[gd_scene load_steps=60 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://actors/InventorySlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/green_tick.png" type="Texture" id=3]
[ext_resource path="res://images/sprites/blue_circle.png" type="Texture" id=4]
[ext_resource path="res://scripts/TouchScreenButton.gd" type="Script" id=5]
[ext_resource path="res://images/up_button.png" type="Texture" id=6]
[ext_resource path="res://images/5.png" type="Texture" id=7]
[ext_resource path="res://images/prefabs/small_banner_1.png" type="Texture" id=8]
[ext_resource path="res://images/hpbar/over.png" type="Texture" id=9]
[ext_resource path="res://resources/Font_2.tres" type="DynamicFont" id=10]
[ext_resource path="res://images/sprites/09-Idle Sword/Idle Sword 01.png" type="Texture" id=11]
[ext_resource path="res://resources/Panel2.tres" type="StyleBox" id=12]
[ext_resource path="res://images/hpbar/3.png" type="Texture" id=13]
[ext_resource path="res://images/hpbar/head.png" type="Texture" id=14]
[ext_resource path="res://images/hpbar/4.png" type="Texture" id=15]
[ext_resource path="res://scripts/AlmanacPanel.gd" type="Script" id=16]
[ext_resource path="res://images/book_03g.png" type="Texture" id=17]
[ext_resource path="res://images/sprites/upgrades/Gold Coin/02.png" type="Texture" id=18]
[ext_resource path="res://images/sprites/upgrades/Gold Coin/03.png" type="Texture" id=19]
[ext_resource path="res://images/sprites/upgrades/Gold Coin/04.png" type="Texture" id=20]
[ext_resource path="res://images/sprites/upgrades/Gold Coin/01.png" type="Texture" id=21]
[ext_resource path="res://music/Sword10.wav" type="AudioStream" id=22]
[ext_resource path="res://music/Click4.wav" type="AudioStream" id=23]
[ext_resource path="res://music/Menu_Sound_Error.wav" type="AudioStream" id=24]
[ext_resource path="res://music/Menu_Sound_Load_Savefile.wav" type="AudioStream" id=25]
[ext_resource path="res://resources/Panel3.tres" type="StyleBox" id=26]
[ext_resource path="res://images/sprites/upgrades/Red Potion/03.png" type="Texture" id=27]
[ext_resource path="res://images/sprites/upgrades/Red Potion/07.png" type="Texture" id=28]
[ext_resource path="res://images/sprites/upgrades/Red Potion/01.png" type="Texture" id=29]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/04.png" type="Texture" id=30]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/06.png" type="Texture" id=31]
[ext_resource path="res://images/sprites/upgrades/Red Potion/04.png" type="Texture" id=32]
[ext_resource path="res://images/sprites/upgrades/Red Potion/06.png" type="Texture" id=33]
[ext_resource path="res://images/sprites/upgrades/Red Potion/02.png" type="Texture" id=34]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/03.png" type="Texture" id=35]
[ext_resource path="res://images/sprites/upgrades/Red Potion/05.png" type="Texture" id=36]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/08.png" type="Texture" id=37]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/07.png" type="Texture" id=38]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/02.png" type="Texture" id=39]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/01.png" type="Texture" id=40]
[ext_resource path="res://images/sprites/upgrades/Golden Skull/05.png" type="Texture" id=41]
[ext_resource path="res://images/prefabs/11.png" type="Texture" id=42]
[ext_resource path="res://images/next_icon.png" type="Texture" id=43]
[ext_resource path="res://images/prefabs/small_banner_2.png" type="Texture" id=44]
[ext_resource path="res://images/x_icon.png" type="Texture" id=45]
[ext_resource path="res://images/home_icon.png" type="Texture" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


void fragment(){
	vec4 col = textureLod(SCREEN_TEXTURE, SCREEN_UV, 1.0);
	
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 39 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 41 ), ExtResource( 31 ), ExtResource( 38 ), ExtResource( 37 ) ],
"loop": true,
"name": "goldSkull",
"speed": 6.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "goldCoin",
"speed": 6.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 34 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 28 ) ],
"loop": true,
"name": "redPotion",
"speed": 6.0
} ]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.964706, 0.870588, 0.686275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=12]
length = 0.2
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("AlmanacPanel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("GameoverPanel:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, -132 ), Vector2( 144, 72 ) ]
}

[node name="UI" type="Control" groups=[
"UIGroup",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 150, 184 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="GoldLabel" type="Label" parent="AnimatedSprite"]
margin_left = 4.0
margin_top = -10.0
margin_right = 64.0
margin_bottom = 17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "999999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct" type="Label" parent="."]
visible = false
margin_right = 73.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Correct:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 1.0
margin_top = 35.0
margin_right = 47.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.960784, 0.960784, 0.960784, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="Label" parent="."]
visible = false
margin_left = 87.0
margin_top = 1.0
margin_right = 151.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Wrong:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="."]
margin_left = 396.0
margin_top = 4.0
margin_right = 420.0
margin_bottom = 28.0
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 46 )
texture_hover = ExtResource( 46 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Almanac" type="TextureButton" parent="."]
margin_left = 5.0
margin_top = 59.0
margin_right = 27.0
margin_bottom = 81.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsPanel" type="Panel" parent="."]
margin_left = 141.0
margin_top = 195.0
margin_right = 312.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsGrid" type="HBoxContainer" parent="ItemsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 3.0
margin_right = -17.0
margin_bottom = -13.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySlot" parent="ItemsPanel/ItemsGrid" instance=ExtResource( 2 )]

[node name="InventorySlot2" parent="ItemsPanel/ItemsGrid" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 68.0

[node name="InventorySlot3" parent="ItemsPanel/ItemsGrid" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 104.0

[node name="InventorySlot4" parent="ItemsPanel/ItemsGrid" instance=ExtResource( 2 )]
margin_left = 108.0
margin_right = 140.0

[node name="QuizPanel" type="Panel" parent="."]
visible = false
margin_left = 38.0
margin_top = 19.0
margin_right = 380.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuizTitle" type="Label" parent="QuizPanel"]
margin_left = 113.0
margin_top = 11.0
margin_right = 234.0
margin_bottom = 38.0
text = "Example Question:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuizQuestion" type="Label" parent="QuizPanel"]
margin_left = 49.0
margin_top = 40.0
margin_right = 291.0
margin_bottom = 125.0
text = "What is 1+1?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="QuizPanel"]
margin_left = 11.5
margin_top = 9.5
margin_right = 77.5
margin_bottom = 29.5
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswersGrid" type="GridContainer" parent="QuizPanel"]
margin_left = 29.0
margin_top = 110.0
margin_right = 314.0
margin_bottom = 184.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPPanel" type="Panel" parent="."]
margin_left = 18.0
margin_top = 6.0
margin_right = 151.0
margin_bottom = 29.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="head" type="Sprite" parent="HPPanel"]
position = Vector2( 3, 10 )
texture = ExtResource( 14 )

[node name="4" type="Sprite" parent="HPPanel"]
position = Vector2( 87, 10 )
scale = Vector2( 1, 0.921875 )
texture = ExtResource( 15 )

[node name="HPBar" type="TextureProgress" parent="HPPanel"]
margin_left = 3.0
margin_top = -6.0
margin_right = 100.0
margin_bottom = 26.0
step = 0.05
value = 20.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameoverPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -69.0
margin_top = -132.0
margin_right = 70.0
margin_bottom = -4.0
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bac" type="TextureRect" parent="GameoverPanel"]
margin_left = -46.0
margin_top = -9.0
margin_right = 185.0
margin_bottom = 136.0
texture = ExtResource( 42 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="GameoverPanel"]
margin_left = 56.0
margin_top = 79.0
margin_right = 82.0
margin_bottom = 107.0
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 46 )
texture_hover = ExtResource( 46 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="GameoverPanel"]
margin_left = 21.0
margin_top = -31.0
margin_right = 74.0
margin_bottom = -2.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameoverPanel"]
margin_left = 74.0
margin_top = -39.0
margin_right = 127.0
margin_bottom = -10.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="GameoverPanel"]
margin_left = 15.0
margin_top = 32.0
margin_right = 122.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Score: 999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="GameoverPanel"]

[node name="ColorRect" type="ColorRect" parent="GameoverPanel/CanvasLayer"]
visible = false
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameoverPanel"]
show_behind_parent = true
margin_top = -49.0
margin_right = 140.0
margin_bottom = 9.0
texture = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 60, 186 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 4 )

[node name="Joystick" type="TouchScreenButton" parent="Sprite"]
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
shape = SubResource( 5 )
script = ExtResource( 5 )

[node name="Jump" type="TouchScreenButton" parent="."]
position = Vector2( 380, 184 )
normal = ExtResource( 6 )
action = "ui_up"

[node name="Attack" type="TouchScreenButton" parent="."]
position = Vector2( 331, 184 )
normal = ExtResource( 7 )
action = "ui_attack"

[node name="StoryPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="StoryPanel"]
margin_left = 23.0
margin_top = 33.0
margin_right = 406.0
margin_bottom = 221.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="StoryPanel"]
margin_left = 50.0
margin_top = 41.0
margin_right = 358.0
margin_bottom = 188.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.424805, 0.344638, 0.316944, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="StoryPanel"]
visible = false
margin_left = 175.0
margin_top = 201.0
margin_right = 235.0
margin_bottom = 229.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="StoryPanel"]
margin_left = 349.0
margin_top = 185.0
margin_right = 373.0
margin_bottom = 209.0
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 43 )
texture_hover = ExtResource( 43 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="StoryPanel"]
position = Vector2( 118, 22 )
frames = SubResource( 8 )
animation = "goldSkull"
frame = 3
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="StoryPanel"]
position = Vector2( 296, 22 )
frames = SubResource( 8 )
animation = "goldSkull"
frame = 3
playing = true

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
margin_left = 61.0
margin_top = 151.0
margin_right = 353.0
margin_bottom = 231.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialText" type="RichTextLabel" parent="TutorialPanel"]
margin_left = 68.0
margin_top = 9.0
margin_right = 279.0
margin_bottom = 60.0
mouse_filter = 2
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_colors/default_color = Color( 0.101961, 0.101961, 0.101961, 1 )
bbcode_enabled = true
bbcode_text = "TAETSFGDFGDFG DFG DFHDF DGDFG"
text = "TAETSFGDFGDFG DFG DFHDF DGDFG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialCharTimer" type="Timer" parent="TutorialPanel"]
wait_time = 0.05

[node name="Panel" type="Panel" parent="TutorialPanel"]
margin_left = 13.0
margin_top = 16.0
margin_right = 53.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TutorialPanel/Panel"]
position = Vector2( 14, 21 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="TutorialPanel"]
margin_left = 92.0
margin_top = 58.0
margin_right = 196.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
text = "TAP TO INTERACT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="TutorialPanel"]
margin_left = 7.0
margin_top = -3.0
margin_right = 62.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.105882, 0.105882, 0.105882, 1 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 126.0
margin_top = 61.0
margin_right = 326.0
margin_bottom = 140.0
dialog_text = "Exit to menu?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePromptPanel" type="Panel" parent="."]
visible = false
margin_left = 106.0
margin_top = 28.0
margin_right = 317.0
margin_bottom = 164.0
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="NamePromptPanel"]
margin_left = 23.0
margin_top = 39.0
margin_right = 189.0
margin_bottom = 93.0
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
placeholder_text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NamePromptPanel"]
margin_left = 28.0
margin_top = 15.0
margin_right = 180.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Ano ang iyong pangalan pirata?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="NamePromptPanel"]
margin_left = 64.0
margin_top = 97.0
margin_right = 142.0
margin_bottom = 125.0
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/almanacPop = SubResource( 12 )
anims/gameOverFade = SubResource( 13 )

[node name="DialogCharTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="AlmanacPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AlmanacPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -71.0
margin_top = -5.0
margin_right = 72.0
margin_bottom = 59.0
texture = ExtResource( 44 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlamanacLabel" type="Label" parent="AlmanacPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_top = 10.0
margin_right = 87.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Almanac"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AlmanacPanel"]
anchor_top = 0.187
anchor_right = 1.0
anchor_bottom = 0.775
margin_left = 12.0
margin_top = 0.119999
margin_right = -15.0
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="AlmanacPanel/ScrollContainer"]
margin_right = 399.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="AlmanacPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -34.0
margin_top = 12.0
margin_right = -10.0
margin_bottom = 36.0
texture_normal = ExtResource( 45 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 45 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -12.0
bus = "SFX"

[node name="Click2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
bus = "SFX"

[node name="Nice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
bus = "SFX"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Almanac" to="." method="_on_Almanac_pressed"]
[connection signal="pressed" from="QuizPanel/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="GameoverPanel/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="StoryPanel/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="StoryPanel/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="gui_input" from="TutorialPanel" to="." method="_on_TutorialPanel_gui_input"]
[connection signal="timeout" from="TutorialPanel/TutorialCharTimer" to="." method="_on_TutorialCharTimer_timeout"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="NamePromptPanel/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="timeout" from="DialogCharTimer" to="." method="_on_DialogCharTimer_timeout"]
[connection signal="pressed" from="AlmanacPanel/Close" to="AlmanacPanel" method="_on_Close_pressed"]
